--- a/Manager/Web.config
+++ b/Manager/Web.config
@@ -15,9 +15,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/login/login"></forms>
+	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  
   </system.web>
+	
+
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
