--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -172,6 +172,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CSS\AdminnDashboard.css" />
+    <Content Include="Content\CSS\buttons.css" />
     <Content Include="Content\CSS\RegistrationPagee.css" />
     <Content Include="Content\CSS\AdminTask.css" />
     <Content Include="favicon.ico" />
@@ -248,6 +249,7 @@
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Emp\Assigned.cshtml" />
     <Content Include="Views\Emp\TodayAssigned.cshtml" />
+    <Content Include="Views\Emp\EditComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
