--- a/Manager/Web.config
+++ b/Manager/Web.config
@@ -22,6 +22,17 @@
     <httpRuntime targetFramework="4.7.2" />
 	  
   </system.web>
+    <system.net>
+		<mailSettings>
+			<smtp from="rahulkumar614299@gmail.com">
+				<network host="smtp.gmail.com"
+				 port="587"
+				 userName=""
+				 password=""
+				 enableSsl="true"/>
+			</smtp>
+		</mailSettings>
+	</system.net>
 	
 
 	
@@ -70,4 +81,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
 </configuration>
